--- a/photosynth/ui/index.html
+++ b/photosynth/ui/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,12 +10,29 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        body { background-color: #0f172a; color: #e2e8f0; font-family: 'Inter', sans-serif; }
-        .glass { background: rgba(30, 41, 59, 0.7); backdrop-filter: blur(10px); border: 1px solid rgba(255, 255, 255, 0.1); }
-        .card { transition: all 0.3s ease; }
-        .card:hover { transform: translateY(-2px); box-shadow: 0 10px 20px rgba(0,0,0,0.3); }
+        body {
+            background-color: #0f172a;
+            color: #e2e8f0;
+            font-family: 'Inter', sans-serif;
+        }
+
+        .glass {
+            background: rgba(30, 41, 59, 0.7);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        .card {
+            transition: all 0.3s ease;
+        }
+
+        .card:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+        }
     </style>
 </head>
+
 <body class="min-h-screen p-8">
     <div id="root"></div>
 
@@ -24,35 +42,37 @@
         function App() {
             const [stats, setStats] = useState({ total_files: 0, processed: 0, pending: 0 });
             const [clusters, setClusters] = useState([]);
-            const [recentActivity, setRecentActivity] = useState([]);
 
-            // Poll for stats and activity
+            const fetchData = async () => {
+                try {
+                    const statsRes = await fetch('/stats');
+                    const statsData = await statsRes.json();
+                    setStats(statsData);
+
+                    const clustersRes = await fetch('/clusters');
+                    const clustersData = await clustersRes.json();
+                    setClusters(clustersData);
+                } catch (e) { console.error(e); }
+            };
+
             useEffect(() => {
-                const fetchData = async () => {
-                    try {
-                        const statsRes = await fetch('http://localhost:8000/stats');
-                        const statsData = await statsRes.json();
-                        setStats(statsData);
-
-                        const clustersRes = await fetch('http://localhost:8000/clusters');
-                        const clustersData = await clustersRes.json();
-                        setClusters(clustersData);
-                        
-                        // Simulate recent activity for now (replace with real API later)
-                        // setRecentActivity([...]); 
-                    } catch (e) {
-                        console.error("API Error", e);
-                    }
-                };
-
                 fetchData();
-                const interval = setInterval(fetchData, 5000); // Poll every 5s
+                const interval = setInterval(fetchData, 5000);
                 return () => clearInterval(interval);
             }, []);
 
+            const handleRename = async (clusterId, newName) => {
+                if (!newName) return;
+                await fetch('/tag/cluster', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ cluster_id: clusterId, name: newName })
+                });
+                fetchData(); // Refresh
+            };
+
             return (
                 <div className="max-w-7xl mx-auto space-y-8">
-                    {/* Header */}
                     <header className="flex justify-between items-center">
                         <div>
                             <h1 className="text-4xl font-bold bg-clip-text text-transparent bg-gradient-to-r from-cyan-400 to-blue-600">
@@ -61,53 +81,19 @@
                             <p className="text-slate-400">Distributed Anti-Gravity Pipeline</p>
                         </div>
                         <div className="flex space-x-4">
-                            <StatusCard label="Total Files" value={stats.total_files} color="text-white" />
+                            <StatusCard label="Files" value={stats.total_files} color="text-white" />
                             <StatusCard label="Processed" value={stats.processed} color="text-green-400" />
-                            <StatusCard label="Pending" value={stats.pending} color="text-yellow-400" />
+                            <StatusCard label="Faces" value={stats.faces_found || 0} color="text-purple-400" />
                         </div>
                     </header>
 
-                    {/* Main Grid */}
-                    <div className="grid grid-cols-1 lg:grid-cols-3 gap-8">
-                        
-                        {/* Left: Face Tagging */}
-                        <div className="lg:col-span-2 space-y-6">
-                            <h2 className="text-2xl font-semibold flex items-center">
-                                <span className="mr-2">👤</span> Face Clusters
-                            </h2>
-                            <div className="grid grid-cols-1 md:grid-cols-2 gap-4">
-                                {clusters.map(cluster => (
-                                    <ClusterCard key={cluster.id} cluster={cluster} />
-                                ))}
-                                {clusters.length === 0 && (
-                                    <p className="text-slate-500 italic">No faces detected yet...</p>
-                                )}
-                            </div>
-                        </div>
-
-                        {/* Right: Live Feed */}
-                        <div className="space-y-6">
-                            <h2 className="text-2xl font-semibold flex items-center">
-                                <span className="mr-2">⚡</span> Live Activity
-                            </h2>
-                            <div className="glass rounded-xl p-4 h-[600px] overflow-y-auto space-y-3">
-                                {/* Placeholder Activity Items */}
-                                <ActivityItem 
-                                    type="processing" 
-                                    text="Processing IMG_9283.JPG" 
-                                    subtext="Node B (5090) • Qwen3-VL" 
-                                />
-                                <ActivityItem 
-                                    type="success" 
-                                    text="Finished DSC001.ARW" 
-                                    subtext="Found: 'Cat', 'Garden'" 
-                                />
-                                <ActivityItem 
-                                    type="detection" 
-                                    text="Detected 3 Faces in VID_22.mp4" 
-                                    subtext="Node A (3090)" 
-                                />
-                            </div>
+                    <div className="space-y-6">
+                        <h2 className="text-2xl font-semibold">👤 Face Clusters</h2>
+                        <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+                            {clusters.map(cluster => (
+                                <ClusterCard key={cluster.id} cluster={cluster} onRename={handleRename} />
+                            ))}
+                            {clusters.length === 0 && <p className="text-slate-500">No clusters found yet.</p>}
                         </div>
                     </div>
                 </div>
@@ -118,47 +104,40 @@
             return (
                 <div className="glass px-6 py-3 rounded-lg text-center min-w-[120px]">
                     <div className={`text-2xl font-bold ${color}`}>{value}</div>
-                    <div className="text-xs text-slate-400 uppercase tracking-wider">{label}</div>
+                    <div className="text-xs text-slate-400 uppercase">{label}</div>
                 </div>
             );
         }
 
-        function ClusterCard({ cluster }) {
+        function ClusterCard({ cluster, onRename }) {
+            const [nameInput, setNameInput] = useState("");
+
             return (
                 <div className="glass p-4 rounded-xl card">
                     <div className="flex justify-between items-start mb-3">
-                        <h3 className="font-bold text-lg">{cluster.name}</h3>
+                        <h3 className="font-bold text-lg text-white">{cluster.name}</h3>
                         <span className="bg-blue-500/20 text-blue-300 text-xs px-2 py-1 rounded">
-                            {cluster.faces.length} Photos
+                            ID: {cluster.id}
                         </span>
                     </div>
-                    <div className="flex space-x-2 overflow-x-auto pb-2">
-                        {cluster.faces.slice(0, 5).map((face, i) => (
+                    <div className="flex space-x-2 overflow-x-auto pb-2 h-20">
+                        {cluster.faces.map((face, i) => (
                             <img key={i} src={face.url} className="w-16 h-16 rounded-lg object-cover border border-slate-600" />
                         ))}
                     </div>
                     <div className="mt-3 flex space-x-2">
-                        <input type="text" placeholder="Name this person..." className="bg-slate-800 border border-slate-700 rounded px-3 py-1 text-sm w-full focus:outline-none focus:border-blue-500" />
-                        <button className="bg-blue-600 hover:bg-blue-500 px-3 py-1 rounded text-sm font-medium transition-colors">
+                        <input
+                            type="text"
+                            placeholder="Name..."
+                            className="bg-slate-800 border border-slate-700 rounded px-3 py-1 text-sm w-full focus:outline-none text-white"
+                            value={nameInput}
+                            onChange={(e) => setNameInput(e.target.value)}
+                        />
+                        <button
+                            onClick={() => { onRename(cluster.id, nameInput); setNameInput(""); }}
+                            className="bg-blue-600 hover:bg-blue-500 px-3 py-1 rounded text-sm font-medium text-white">
                             Save
                         </button>
-                    </div>
-                </div>
-            );
-        }
-
-        function ActivityItem({ type, text, subtext }) {
-            let icon = "🔄";
-            let color = "text-blue-400";
-            if (type === "success") { icon = "✅"; color = "text-green-400"; }
-            if (type === "detection") { icon = "👁️"; color = "text-purple-400"; }
-
-            return (
-                <div className="flex items-start space-x-3 p-2 rounded hover:bg-slate-800/50 transition-colors">
-                    <div className="text-xl">{icon}</div>
-                    <div>
-                        <div className={`text-sm font-medium ${color}`}>{text}</div>
-                        <div className="text-xs text-slate-500">{subtext}</div>
                     </div>
                 </div>
             );
@@ -168,4 +147,5 @@
         root.render(<App />);
     </script>
 </body>
+
 </html>
